atualização no Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,12 @@
 name = "m-dulo-rust"
 version = "0.1.0"
 edition = "2021"
+authors = ["Jefferson Hipolito de Oliveira <suporte@webhostpro.com.br>"]
+description = "O m-dulo-rust é um projeto em Rust que utiliza o framework web Axum para criar uma aplicação web assíncrona e de alto desempenho. Ele aproveita o Tokio para execução assíncrona, Serde para serialização/desserialização de dados em JSON, e um banco de dados SQLite via SQLx para persistência. A aplicação também utiliza UUIDs para geração de identifica"
+license = "MIT"
+repository = "https://github.com/sshturbo/m-dulo-rust"
+readme = "README.md"
+
 
 [dependencies]
 axum = { version = "0.7", features = ["ws", "macros"] }
