feat: adicionar suporte para monitoramento de usuários online via WebSocket

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,12 @@ readme = "README.md"
 
 
 [dependencies]
+sqlx = { version = "0.7", features = [
+    "runtime-tokio-rustls",
+    "sqlite",
+    "chrono",
+    "macros"
+] }
 axum = { version = "0.7", features = ["ws", "macros"] }
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
@@ -20,11 +26,5 @@ chrono = "0.4"
 dotenv = "0.15"
 log = "0.4"
 env_logger = "0.10"
-zbus = "2.0"
 thiserror = "1.0"
 
-sqlx = { version = "0.7", features = [
-    "runtime-tokio-rustls",
-    "sqlite",
-    "macros"
-] }
