--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,9 @@ readme = "README.md"
 [dependencies]
 sqlx = { version = "0.7", features = [
     "runtime-tokio-rustls",
-    "sqlite",
-    "chrono",
-    "macros"
+    "postgres",
+    "macros",
+    "migrate"
 ] }
 axum = { version = "0.7", features = ["ws", "macros"] }
 tokio = { version = "1", features = ["full"] }
@@ -22,9 +22,8 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 uuid = { version = "1.5", features = ["v4"] }
 rand = "0.8"
-chrono = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
 dotenv = "0.15"
 log = "0.4"
 env_logger = "0.10"
 thiserror = "1.0"
-
