Alterar o banco de dados de Postgres para SQLite no projeto, atualizando as consultas e a configuração do ambiente.

--- a/.env.exemple
+++ b/.env.exemple
@@ -1,2 +1,2 @@
-DATABASE_URL="postgres://postgres:cb8c87193f183f91a16e6eb697ca84ec@localhost:5432/postgres"
+DATABASE_URL="db/database.sqlite"
 API_TOKEN=seu_token_aqu
