--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ axum = { version = "0.7", features = ["ws", "macros"] }
 
 # Async runtime
 tokio = { version = "1", features = ["full"] }
+tokio-stream = { version = "0.1", features = ["io-util"] }
 
 # Banco de dados
 sqlx = { version = "0.7", features = [
@@ -41,3 +42,6 @@ once_cell = "1.21.3"
 # Futures (async)
 futures = { version = "0.3", features = ["std", "async-await"] }
 futures-util = { version = "0.3", features = ["std", "async-await", "sink"] }
+
+# Additional dependencies
+which = "4.4"
