Atualizar configuração do projeto para usar PostgreSQL, removendo dependências do SQLite. Alterar a estrutura do banco de dados e as funções relacionadas para suportar a nova configuração, incluindo a adição de um campo para habilitar logs. Remover lógica de backup do banco de dados, que não é mais necessária.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,12 +17,7 @@ tokio = { version = "1", features = ["full"] }
 tokio-stream = { version = "0.1", features = ["io-util"] }
 
 # Banco de dados
-sqlx = { version = "0.7", features = [
-    "runtime-tokio-rustls",
-    "macros",
-    "migrate",
-    "sqlite"
-] }
+sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros"] }
 
 # Serialização
 serde = { version = "1.0", features = ["derive"] }
