Adicionar dependência `url` ao projeto e refatorar a função de instalação do PostgreSQL para criar banco e usuário a partir da URL de configuração, melhorando o tratamento de erros e a lógica de criação.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,3 +40,5 @@ futures-util = { version = "0.3", features = ["std", "async-await", "sink"] }
 
 # Additional dependencies
 which = "4.4"
+
+url = "2"
