--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
   "api_token": "SUA_API_KEY",
-  "database_url": "postgres://postgres@localhost/mdulo",
+  "database_url": "postgres://postgres:i92rG0WUo0D57oP@localhost/mdulo",
   "logs_enabled": true
 }
