Adicionar suporte ao Redis para monitoramento de usuários online, substituindo a lógica anterior baseada em PostgreSQL. Atualizar funções para utilizar conexões assíncronas com Redis e refatorar a estrutura de dados para otimizar o armazenamento e recuperação de informações de usuários. Reduzir o tamanho do lote de sincronização e ajustar a função de obtenção de usuários para retornar um vetor em vez de uma string.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,3 +42,5 @@ futures-util = { version = "0.3", features = ["std", "async-await", "sink"] }
 which = "4.4"
 
 url = "2"
+
+redis = { version = "0.24", features = ["tokio-comp"] }
