--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,3 +46,10 @@ url = "2"
 redis = { version = "0.24", features = ["tokio-comp"] }
 
 tokio-postgres = "0.7"
+
+tonic = "0.11"
+prost = "0.12"
+
+[build-dependencies]
+tonic-build = "0.11"
+prost-build = "0.12"
