--- a/config.json
+++ b/config.json
@@ -1,5 +1,7 @@
 {
   "api_token": "SUA_API_KEY",
   "database_url": "postgres://mdulo:i92rG0WUo0D57oP@localhost/mdulo",
-  "logs_enabled": true
+  "logs_enabled": true,
+  "cloudflare_api_key": "8dYdLfAIx_NxhVVk4-QjZJuDeRW_NGsShIzGYaYa",
+  "cloudflare_domain": "painelwebpro.com.br"
 }
