--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ tokio = { version = "1", features = ["full"] }
 tokio-stream = { version = "0.1", features = ["io-util"] }
 
 # Banco de dados
-sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros"] }
+sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "uuid"] }
 
 # Serialização
 serde = { version = "1.0", features = ["derive"] }
@@ -49,6 +49,9 @@ tokio-postgres = "0.7"
 
 tonic = "0.11"
 prost = "0.12"
+
+dashmap = "5"
+tokio-tungstenite = "0.20"
 
 [build-dependencies]
 tonic-build = "0.11"
