Adicionar novas dependências no Cargo.toml para suporte a sockets e manipulação de HTTP. Atualizar a estrutura de configuração para incluir a porta do Xray e refatorar o código do servidor proxy para melhorar a configuração de sockets, gerenciamento de conexões e tratamento de timeouts. Implementar lógica de keepalive e otimizar a leitura de dados do cliente e do Xray, melhorando a robustez e a eficiência do sistema.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,11 @@ prost = "0.12"
 
 dashmap = "5"
 tokio-tungstenite = "0.20"
+nix = { version = "0.30.0", features = ["socket"] }
+httparse = "1.10.1"
+hyper = "1.6.0"
+tokio-util = "0.7.15"
+bytes = "1.10.1"
 
 [build-dependencies]
 tonic-build = "0.11"
