--- a/config.json
+++ b/config.json
@@ -3,5 +3,6 @@
   "database_url": "postgres://mdulo:i92rG0WUo0D57oP@localhost/mdulo",
   "logs_enabled": true,
   "cloudflare_api_key": "8dYdLfAIx_NxhVVk4-QjZJuDeRW_NGsShIzGYaYa",
-  "cloudflare_domain": "painelwebpro.com.br"
+  "cloudflare_domain": "painelwebpro.com.br",
+  "xray_port": 80
 }
